PyMaker/datas/object2/RawHTML/i801/Python_DOC_referPages.ipython3-does-not-work-in-the-terminal-with-python3-7.txt
<div class="post-text" itemprop="text">
<p>I recently upgraded from Python3.6 to Python3.7. Since I have upgraded, when I type in <code>ipython3</code> in the terminal I get an error:</p>
<pre><code>~$ ipython3
Traceback (most recent call last):
  File "&lt;string&gt;", line 1, in &lt;module&gt;
  File "/usr/lib/python3/dist-packages/IPython/__init__.py", line 48, in &lt;module&gt;
    from .core.application import Application
  File "/usr/lib/python3/dist-packages/IPython/core/application.py", line 25, in &lt;module&gt;
    from IPython.core import release, crashhandler
  File "/usr/lib/python3/dist-packages/IPython/core/crashhandler.py", line 28, in &lt;module&gt;
    from IPython.core import ultratb
  File "/usr/lib/python3/dist-packages/IPython/core/ultratb.py", line 124, in &lt;module&gt;
    from IPython.utils import path as util_path
  File "/usr/lib/python3/dist-packages/IPython/utils/path.py", line 18, in &lt;module&gt;
    from IPython.utils.process import system
  File "/usr/lib/python3/dist-packages/IPython/utils/process.py", line 19, in &lt;module&gt;
    from ._process_posix import system, getoutput, arg_split, check_pid
  File "/usr/lib/python3/dist-packages/IPython/utils/_process_posix.py", line 24, in &lt;module&gt;
    import pexpect
  File "/usr/lib/python3/dist-packages/pexpect/__init__.py", line 75, in &lt;module&gt;
    from .pty_spawn import spawn, spawnu
  File "/usr/lib/python3/dist-packages/pexpect/pty_spawn.py", line 14, in &lt;module&gt;
    from .spawnbase import SpawnBase
  File "/usr/lib/python3/dist-packages/pexpect/spawnbase.py", line 224
    def expect(self, pattern, timeout=-1, searchwindowsize=-1, async=False):
                                                                   ^
SyntaxError: invalid syntax
</code></pre>
<p>Furthermore I have noticed that my jupyter-notebook does not seem to work with the python3 kernel now as well (I get the kernel dead error).</p>
<p>NOTEs: </p>
<ul>
<li>ipython and jupyter-notebook are working with fine when I use them with Python2.</li>
<li>I am using Ubuntu 18.04 (Bionic Beaver) although I don't think this is relevant</li>
</ul>
</div>
<div class="post-text" itemprop="text">
<p><strong>UPDATE</strong> Please update your installed packages. 
This error for <code>pexpect</code> has been reported and closed already <a href="https://github.com/pexpect/pexpect/issues/453" rel="nofollow noreferrer">issue</a></p>
<hr/>
<p>In Python 3.7, <code>async</code> and <code>await</code> are now reserved keywords. This is what is breaking some of your installed packages.</p>
<p>If you do not need the new features in 3.7, roll back to 3.6 and wait until your packages are updated to support the new syntax in 3.7</p>
<p><a href="https://docs.python.org/3/whatsnew/3.7.html" rel="nofollow noreferrer">What's New in Python 3.7</a></p>
</div>
<div class="post-text" itemprop="text">
<p>This appears to be an issue related to <code>async</code> being keyword in Python 3.7</p>
<p>As given <a href="https://github.com/pypa/pipenv/issues/956#issuecomment-410432983" rel="nofollow noreferrer">here</a>, updating <code>pipenv</code> might be the solution</p>
</div>
<div class="post-text" itemprop="text">
<p>I just solve this problem by upgrading pexpect manually. </p>
<p>Download pexpect4.6 source code from <a href="https://github.com/pexpect/pexpect/releases/tag/4.6" rel="nofollow noreferrer">https://github.com/pexpect/pexpect/releases/tag/4.6</a></p>
<p>Extract the source code, get into the folder and install the pexpect by: </p>
<p><code>sudo python3.7 setup.py install</code></p>
</div>
<div class="post-text" itemprop="text">
<p><code>async</code> is a reserved word in <code>Python 3.7</code></p>
<p>You can edit the packages yourself if you feel comfortable doing it. 
Here is a shell command that does just that:</p>
<pre><code>sed "s/async/_async/g" "/usr/lib/python3/dist-packages/pexpect/spawnbase.py" &gt; tmp.txt &amp;&amp; cat tmp.txt &gt; "/usr/lib/python3/dist-packages/pexpect/spawnbase.py" &amp;&amp; rm tmp.txt
</code></pre>
<p>Otherwise, you might want to use Python 3.6 while waiting for an update.</p>
</div>
<span class="comment-copy">What packages does this refer to? Apologies, I'm not too knowledgeable about this stuff.</span>
<span class="comment-copy">In your error code, near the end it says <code>File "/usr/lib/python3/dist-packages/pexpect/spawnbase.py", line 224     def expect(self, pattern, timeout=-1, searchwindowsize=-1, async=False):</code> indicates that you have a package called <code>pexpect</code> that is using <code>async</code>. But in 3.7, async is now a reserved keyword just like <code>import</code> or <code>class</code> so it can no longer be used a variable name. ipython seems to be using this so uninstalling it might reveal some unintended consequences.</span>
<span class="comment-copy">ah okay thanks :)</span>
<span class="comment-copy">I'm not using a virtual environment. Either way I have upgraded pipenv but I am still getting the same error message</span>
<span class="comment-copy"><code>~$ pip3 uninstall pexpect</code> &gt;&gt; <code>Cannot uninstall 'pexpect'. It is a distutils installed project and thus we cannot accurately determine which files belong to it which would lead to only a partial uninstall.</code></span>
<span class="comment-copy">You either have to get rid of it in some way or you must go back to 3.6. Editing code isn't hard if you really need 3.7</span>
<span class="comment-copy">I don't think it is advisable to remove <code>pexpect</code> given that it is required by ipython3. And the OP wants ipython3 to work. Removing might just break it further.</span>
<span class="comment-copy">Ok edited my answer.</span>
